[package]
name = "tracing-rusoto-logs"
version = "0.1.0"
edition = "2018"

[features]
default = ["native-tls"]

native-tls = ["rusoto_core/native-tls", "rusoto_logs/native-tls"]
rustls = ["rusoto_core/rustls", "rusoto_logs/rustls"]

[dependencies]
async-recursion = "0.3"
futures-lite = "1.12"
parking_lot = "0.11"
rusoto_core = { version = "0.47", default-features = false }
rusoto_logs = { version = "0.47", default-features = false }
tokio = { version = "1", default-features = false, features = ["sync", "rt", "time"] }
tracing-core = "0.1"
tracing-subscriber = { version = "0.2.19", default-features = false, features = ["fmt"] }
